--- a/DLife/Base.lproj/Main.storyboard
+++ b/DLife/Base.lproj/Main.storyboard
@@ -9,38 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="YVI-Lx-lT6">
-            <objects>
-                <viewController id="jTA-8u-9gp" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="DUc-UI-wI7">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8GP-Cf-U8J">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
-                                <connections>
-                                    <segue destination="lN0-0p-jwZ" kind="embed" id="0sm-P5-pfc"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="8GP-Cf-U8J" firstAttribute="top" secondItem="jMP-4i-lu7" secondAttribute="top" id="5Ya-j8-Hmf"/>
-                            <constraint firstItem="jMP-4i-lu7" firstAttribute="trailing" secondItem="8GP-Cf-U8J" secondAttribute="trailing" id="612-gL-q7C"/>
-                            <constraint firstItem="jMP-4i-lu7" firstAttribute="bottom" secondItem="8GP-Cf-U8J" secondAttribute="bottom" id="C07-vY-x2i"/>
-                            <constraint firstItem="8GP-Cf-U8J" firstAttribute="leading" secondItem="jMP-4i-lu7" secondAttribute="leading" id="N8T-rB-nMu"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="jMP-4i-lu7"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="Setting" landscapeImage="Setting" largeContentSizeImage="Setting" selectedImage="Setting" id="11S-hT-fqc">
-                        <inset key="imageInsets" minX="0.0" minY="6" maxX="0.0" maxY="-6"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jZy-aM-ydG" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="535.20000000000005" y="671.51424287856082"/>
-        </scene>
         <!--Page1-->
         <scene sceneID="iNd-Br-NYR">
             <objects>
@@ -71,13 +39,15 @@
             </objects>
             <point key="canvasLocation" x="-523" y="384"/>
         </scene>
-        <!--Page4VC-->
+        <!--Page4-->
         <scene sceneID="PHl-VQ-2l1">
             <objects>
-                <viewControllerPlaceholder storyboardName="Page4" referencedIdentifier="Page4VC" id="lN0-0p-jwZ" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Page4" id="lN0-0p-jwZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="8bt-1U-dvp"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="atA-dZ-tSg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="195" y="1151"/>
+            <point key="canvasLocation" x="277" y="381"/>
         </scene>
         <!--Login-->
         <scene sceneID="ZXD-Rg-lWb">
@@ -88,7 +58,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="dfP-Vn-gdy">
-                                <rect key="frame" x="0.0" y="99" width="375" height="450"/>
+                                <rect key="frame" x="0.0" y="84" width="375" height="480"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="xfv-Ep-HOv">
                                         <rect key="frame" x="37.5" y="0.0" width="300" height="300"/>
@@ -118,7 +88,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="loginBtn:" destination="NCN-19-0df" eventType="touchUpInside" id="HXp-rA-cJf"/>
+                                            <action selector="loginBtn:" destination="NCN-19-0df" eventType="touchUpInside" id="B6Y-dT-2Z7"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dLh-Tc-phZ">
@@ -131,8 +101,18 @@
                                             <action selector="resetBtn:" destination="NCN-19-0df" eventType="touchUpInside" id="UkV-IK-hnE"/>
                                         </connections>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wgc-Uh-6yG">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oec-xD-c8n">
                                         <rect key="frame" x="50" y="420" width="275" height="30"/>
+                                        <color key="backgroundColor" red="0.25948911905288696" green="0.4048992395401001" blue="0.69960957765579224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Facebook Login">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="FacebookLoginBT:" destination="NCN-19-0df" eventType="touchUpInside" id="PK9-CO-EJY"/>
+                                        </connections>
+                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wgc-Uh-6yG">
+                                        <rect key="frame" x="50" y="450" width="275" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1o-kd-xVl">
                                                 <rect key="frame" x="0.0" y="0.0" width="69" height="30"/>
@@ -191,10 +171,13 @@
                                     <constraint firstItem="0N7-gS-kBy" firstAttribute="height" secondItem="tcj-mJ-ahJ" secondAttribute="height" id="5tn-A3-yzf"/>
                                     <constraint firstItem="0N7-gS-kBy" firstAttribute="centerX" secondItem="dfP-Vn-gdy" secondAttribute="centerX" id="F3t-X6-1Iq"/>
                                     <constraint firstItem="GyI-At-9rh" firstAttribute="height" secondItem="tcj-mJ-ahJ" secondAttribute="height" id="G99-VS-7Sn"/>
+                                    <constraint firstItem="oec-xD-c8n" firstAttribute="width" secondItem="dLh-Tc-phZ" secondAttribute="width" id="HOw-1Q-DdE"/>
                                     <constraint firstItem="tcj-mJ-ahJ" firstAttribute="leading" secondItem="dfP-Vn-gdy" secondAttribute="leading" constant="50" id="LOb-in-GGR"/>
+                                    <constraint firstItem="oec-xD-c8n" firstAttribute="height" secondItem="dLh-Tc-phZ" secondAttribute="height" id="Sgv-Sz-Ujd"/>
                                     <constraint firstItem="tcj-mJ-ahJ" firstAttribute="top" secondItem="xfv-Ep-HOv" secondAttribute="bottom" id="TyI-fq-fKV"/>
                                     <constraint firstItem="dLh-Tc-phZ" firstAttribute="width" secondItem="tcj-mJ-ahJ" secondAttribute="width" id="WBa-91-7Z1"/>
                                     <constraint firstItem="GyI-At-9rh" firstAttribute="width" secondItem="tcj-mJ-ahJ" secondAttribute="width" id="XXI-PM-Sdk"/>
+                                    <constraint firstItem="oec-xD-c8n" firstAttribute="top" secondItem="dLh-Tc-phZ" secondAttribute="bottom" id="akf-CN-oPU"/>
                                     <constraint firstItem="Wgc-Uh-6yG" firstAttribute="width" secondItem="tcj-mJ-ahJ" secondAttribute="width" id="cqh-LS-LjG"/>
                                     <constraint firstItem="tcj-mJ-ahJ" firstAttribute="centerX" secondItem="dfP-Vn-gdy" secondAttribute="centerX" id="dnE-c5-WZA"/>
                                     <constraint firstAttribute="trailing" secondItem="tcj-mJ-ahJ" secondAttribute="trailing" constant="50" id="l3o-Xc-Mx0"/>
@@ -203,7 +186,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.14426684379577637" green="0.64679336547851562" blue="0.5453980565071106" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.14509803921568626" green="0.6470588235294118" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="dfP-Vn-gdy" firstAttribute="width" secondItem="6EO-fu-HDf" secondAttribute="width" id="8SL-kf-G5d"/>
                             <constraint firstItem="dfP-Vn-gdy" firstAttribute="centerX" secondItem="6EO-fu-HDf" secondAttribute="centerX" id="CBm-Md-tj8"/>
@@ -245,7 +228,7 @@
                         <segue destination="a77-LL-RXy" kind="relationship" relationship="viewControllers" id="RwZ-HH-k1v"/>
                         <segue destination="zcN-KN-5K6" kind="relationship" relationship="viewControllers" id="1Pc-Ym-3qZ"/>
                         <segue destination="ziH-tY-YC5" kind="relationship" relationship="viewControllers" id="QZG-GA-kwn"/>
-                        <segue destination="jTA-8u-9gp" kind="relationship" relationship="viewControllers" id="Tpn-Fo-Ytx"/>
+                        <segue destination="lN0-0p-jwZ" kind="relationship" relationship="viewControllers" id="jAY-de-Cx3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GxV-dm-rbu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -254,8 +237,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Setting" width="33" height="30"/>
-        <image name="Wall" width="32" height="26"/>
         <image name="logo" width="300" height="300"/>
     </resources>
 </document>
